--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,9 @@
-
 {
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
         {
             "name": "Sandbox Project",
             "type": "coreclr",
@@ -17,208 +18,234 @@
         },
 
         {
-            "name": "Week 01: C# Exercise 1",
+            "name": "C# Prep 1",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week01-Exercise1",
-            "program": "${workspaceFolder}/week01/Exercise1/bin/Debug/net8.0/Exercise1.dll",
+            "preLaunchTask": "build-csharp-prep-Prep1",
+            "program": "${workspaceFolder}/csharp-prep/Prep1/bin/Debug/net8.0/Prep1.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week01/Exercise1",
+            "cwd": "${workspaceFolder}/csharp-prep/Prep1",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 01: C# Exercise 2",
+            "name": "C# Prep 2",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week01-Exercise2",
-            "program": "${workspaceFolder}/week01/Exercise2/bin/Debug/net8.0/Exercise2.dll",
+            "preLaunchTask": "build-csharp-prep-Prep2",
+            "program": "${workspaceFolder}/csharp-prep/Prep2/bin/Debug/net8.0/Prep2.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week01/Exercise2",
+            "cwd": "${workspaceFolder}/csharp-prep/Prep2",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 01: C# Exercise 3",
+            "name": "C# Prep 3",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week01-Exercise3",
-            "program": "${workspaceFolder}/week01/Exercise3/bin/Debug/net8.0/Exercise3.dll",
+            "preLaunchTask": "build-csharp-prep-Prep3",
+            "program": "${workspaceFolder}/csharp-prep/Prep3/bin/Debug/net8.0/Prep3.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week01/Exercise3",
+            "cwd": "${workspaceFolder}/csharp-prep/Prep3",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 01: C# Exercise 4",
+            "name": "C# Prep 4",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week01-Exercise4",
-            "program": "${workspaceFolder}/week01/Exercise4/bin/Debug/net8.0/Exercise4.dll",
+            "preLaunchTask": "build-csharp-prep-Prep4",
+            "program": "${workspaceFolder}/csharp-prep/Prep4/bin/Debug/net8.0/Prep4.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week01/Exercise4",
+            "cwd": "${workspaceFolder}/csharp-prep/Prep4",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 01: C# Exercise 5",
+            "name": "C# Prep 5",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week01-Exercise5",
-            "program": "${workspaceFolder}/week01/Exercise5/bin/Debug/net8.0/Exercise5.dll",
+            "preLaunchTask": "build-csharp-prep-Prep5",
+            "program": "${workspaceFolder}/csharp-prep/Prep5/bin/Debug/net8.0/Prep5.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week01/Exercise5",
+            "cwd": "${workspaceFolder}/csharp-prep/Prep5",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 02: Resumes",
+            "name": "Learning 02 (Resume)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week02-Resumes",
-            "program": "${workspaceFolder}/week02/Resumes/bin/Debug/net8.0/Resumes.dll",
+            "preLaunchTask": "build-prepare-Learning02",
+            "program": "${workspaceFolder}/prepare/Learning02/bin/Debug/net8.0/Learning02.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week02/Resumes",
+            "cwd": "${workspaceFolder}/prepare/Learning02",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 02: Journal",
+            "name": "Learning 03 (Fraction)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week02-Journal",
-            "program": "${workspaceFolder}/week02/Journal/bin/Debug/net8.0/Journal.dll",
+            "preLaunchTask": "build-prepare-Learning03",
+            "program": "${workspaceFolder}/prepare/Learning03/bin/Debug/net8.0/Learning03.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week02/Journal",
+            "cwd": "${workspaceFolder}/prepare/Learning03",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 03: Fractions",
+            "name": "Learning 04 (Homework)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week03-Fractions",
-            "program": "${workspaceFolder}/week03/Fractions/bin/Debug/net8.0/Fractions.dll",
+            "preLaunchTask": "build-prepare-Learning04",
+            "program": "${workspaceFolder}/prepare/Learning04/bin/Debug/net8.0/Learning04.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week03/Fractions",
+            "cwd": "${workspaceFolder}/prepare/Learning04",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 03: Scripture Memorizer",
+            "name": "Learning 05 (Shapes)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week03-ScriptureMemorizer",
-            "program": "${workspaceFolder}/week03/ScriptureMemorizer/bin/Debug/net8.0/ScriptureMemorizer.dll",
+            "preLaunchTask": "build-prepare-Learning05",
+            "program": "${workspaceFolder}/prepare/Learning05/bin/Debug/net8.0/Learning05.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week03/ScriptureMemorizer",
+            "cwd": "${workspaceFolder}/prepare/Learning05",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 04: YouTube Videos",
+            "name": "Develop 02 (Journal)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week04-YouTubeVideos",
-            "program": "${workspaceFolder}/week04/YouTubeVideos/bin/Debug/net8.0/YouTubeVideos.dll",
+            "preLaunchTask": "build-prove-Develop02",
+            "program": "${workspaceFolder}/prove/Develop02/bin/Debug/net8.0/Develop02.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week04/YouTubeVideos",
+            "cwd": "${workspaceFolder}/prove/Develop02",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 04: Online Ordering",
+            "name": "Develop 03 (Scripture Memorizer)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week04-OnlineOrdering",
-            "program": "${workspaceFolder}/week04/OnlineOrdering/bin/Debug/net8.0/OnlineOrdering.dll",
+            "preLaunchTask": "build-prove-Develop03",
+            "program": "${workspaceFolder}/prove/Develop03/bin/Debug/net8.0/Develop03.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week04/OnlineOrdering",
+            "cwd": "${workspaceFolder}/prove/Develop03",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 05: Homework",
+            "name": "Develop 04 (Mindfulness)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week05-Homework",
-            "program": "${workspaceFolder}/week05/Homework/bin/Debug/net8.0/Homework.dll",
+            "preLaunchTask": "build-prove-Develop04",
+            "program": "${workspaceFolder}/prove/Develop04/bin/Debug/net8.0/Develop04.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week05/Homework",
+            "cwd": "${workspaceFolder}/prove/Develop04",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 05: Mindfulness",
+            "name": "Develop 05 (Goal Tracker)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week05-Mindfulness",
-            "program": "${workspaceFolder}/week05/Mindfulness/bin/Debug/net8.0/Mindfulness.dll",
+            "preLaunchTask": "build-prove-Develop05",
+            "program": "${workspaceFolder}/prove/Develop05/bin/Debug/net8.0/Develop05.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week05/Mindfulness",
+            "cwd": "${workspaceFolder}/prove/Develop05",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 06: Shapes",
+            "name": "Final Project (Open ended)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week06-Shapes",
-            "program": "${workspaceFolder}/week06/Shapes/bin/Debug/net8.0/Shapes.dll",
+            "preLaunchTask": "build-final-FinalProject",
+            "program": "${workspaceFolder}/final/FinalProject/bin/Debug/net8.0/FinalProject.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week06/Shapes",
+            "cwd": "${workspaceFolder}/final/FinalProject",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 06: Eternal Quest",
+            "name": "Foundation 1 (YouTube)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week06-EternalQuest",
-            "program": "${workspaceFolder}/week06/EternalQuest/bin/Debug/net8.0/EternalQuest.dll",
+            "preLaunchTask": "build-final-Foundation1",
+            "program": "${workspaceFolder}/final/Foundation1/bin/Debug/net8.0/Foundation1.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week06/EternalQuest",
+            "cwd": "${workspaceFolder}/final/Foundation1",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
         },
 
         {
-            "name": "Week 07: Exercise Tracking",
+            "name": "Foundation 2 (Products)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build-week07-ExerciseTracking",
-            "program": "${workspaceFolder}/week07/ExerciseTracking/bin/Debug/net8.0/ExerciseTracking.dll",
+            "preLaunchTask": "build-final-Foundation2",
+            "program": "${workspaceFolder}/final/Foundation2/bin/Debug/net8.0/Foundation2.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/week07/ExerciseTracking",
+            "cwd": "${workspaceFolder}/final/Foundation2",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "stopAtEntry": false
+        },
+
+        {
+            "name": "Foundation 3 (Events)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-final-Foundation3",
+            "program": "${workspaceFolder}/final/Foundation3/bin/Debug/net8.0/Foundation3.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/final/Foundation3",
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "stopAtEntry": false
+        },
+
+        {
+            "name": "Foundation 4 (Exercise)",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-final-Foundation4",
+            "program": "${workspaceFolder}/final/Foundation4/bin/Debug/net8.0/Foundation4.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}/final/Foundation4",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "stopAtEntry": false
